Modifying index to EN

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Portfólio Carolina Yumi</title>
+	<title>Portfolio Carolina Yumi</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
@@ -32,10 +32,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link active">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link active">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -47,55 +47,61 @@
 		<section id="one">
 			<header class="major">
 				<h2>
-					Bem-vindo(a) ao meu portfólio!</h2>
+					Welcome to my portfolio!</h2>
 			</header>
-			<p>Aqui você encontrará todos os meus projetos pessoais e certificados.</p>
+			<p>Here you will find all my personal projects and certificates.</p>
 			<ul class="actions">
-				<li><a href="sobre.html" class="button">Sobre mim</a></li>
+				<li><a href="sobre.html" class="button">About me</a></li>
 			</ul>
 		</section>
 
 		<!-- Portfolio -->
 		<section id="two">
-			<h2>Projetos</h2>
+			<h2>Projects</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="projeto06_breweries.html" class="image fit thumb"><img src="images/thumbs/cervejaria.jpg"
+					<a href="projeto06_breweries.html" class="image fit thumb"><img src="images/thumbs/cervejaria.png"
 							alt="" /></a>
-					<h3>Extração e análise de dados de cervejarias</h3>
-					<p>Dados da API Open Brewery DB.</p>
+					<h3>Brewery data extraction and analysis</h3>
+					<p>Data from the Open Brewery DB API.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto05_previsaotempo.html" class="image fit thumb"><img src="images/thumbs/apihg.jpg"
 							alt="" /></a>
-					<h3>Coleta de dados - API HG Weather</h3>
-					<p>Coleta e processamento de dados do clima de São Carlos.</p>
+					<h3>Data collection - HG Weather API</h3>
+					<p>Collection and processing of climate data for São Carlos.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto04_automacao.html" class="image fit thumb"><img
 							src="images/thumbs/selenium.png" alt="" /></a>
-					<h3>Automação Web - Selenium</h3>
-					<p>Simulação de compra em site utilizando Selenium.</p>
+					<h3>Web Automation - Selenium</h3>
+					<p>Website purchase simulation using Selenium.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto03_pinguins.html" class="image fit thumb"><img src="images/thumbs/pinguins.png"
 							alt="" /></a>
-					<h3>Pinguins</h3>
-					<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
+					<h3>Penguins</h3>
+					<p>Penguin feature analysis project. Source: Kaggle.</p>
 				</article>
 			</div>
 			<ul class="actions">
-				<li><a href="portfolio.html" class="button">Ver o portfólio completo</a></li>
+				<li><a href="portfolio.html" class="button">Complete portfolio</a></li>
 			</ul>
 		</section>
 
-		<!-- Certificados -->
+		<!-- Certificates -->
 		<section id="two">
-			<h2>Certificados</h2>
+			<h2>Certificates</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
+					<a href="https://drive.google.com/file/d/11qjSVfm5jETl3VI-pY48aTOBR_1lsT3A/view?usp=drive_link"
+						class="image fit no-overlay thumb"><img src="images/certificados/certificado10.png" alt="" /></a>
+					<h3>Python Impressionador</h3>
+					<p>Hashtag Treinamentos</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
 					<a href="https://credentials.getdbt.com/09e37c10-89a5-4025-9657-5631c7d0cc6c"
-						class="image fit no-overlay thumb"><img src="images/certificados/certificado09.png" alt="" /></a>
+						class="image fit no-overlay thumb"><img src="images/certificados/certificado09_.png" alt="" /></a>
 					<h3>dbt Fundamentals</h3>
 					<p>dbt Labs</p>
 				</article>
@@ -106,67 +112,19 @@
 					<p>Google Cloud Plataform</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/14e_tIARXiVrx8bDzssSaZo3dtCs6C595/view?usp=sharing"
-						class="image fit no-overlay thumb"><img src="images/certificados/certificado07.png" alt="" /></a>
-					<h3>Fundamentos da Engenharia de Dados</h3>
-					<p>DSA - Carga horária: 24h</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
 					<a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing"
 						class="image fit no-overlay thumb"><img src="images/certificados/certificado05.png" alt="" /></a>
 					<h3>LM Tech Data Talents</h3>
-					<p>Ada Tech - Carga horária: 324h</p>
+					<p>Ada Tech</p>
 				</article>
 			</div>
 			<ul class="actions">
-				<li><a href="certificados.html" class="button">Ver todos os certificados</a></li>
+				<li><a href="certificados.html" class="button">All certificates</a></li>
 			</ul>
 		</section>
 
 		<section></section>
 
-		<!-- 
-		<section id="three">
-			<h2>Get In Touch</h2>
-			<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu
-				lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-			<div class="row">
-				<div class="col-8 col-12-small">
-					<form method="post" action="#">
-						<div class="row gtr-uniform gtr-50">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
-									placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email"
-									placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message"
-									rows="4"></textarea></div>
-						</div>
-					</form>
-					<ul class="actions">
-						<li><input type="submit" value="Send Message" /></li>
-					</ul>
-				</div>
-				<div class="col-4 col-12-small">
-					<ul class="labeled-icons">
-						<li>
-							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-							1234 Somewhere Rd.<br />
-							Nashville, TN 00000<br />
-							United States
-						</li>
-						<li>
-							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-							000-000-0000
-						</li>
-						<li>
-							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="#">hello@untitled.tld</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</section>
- 		-->
 	</div>
 
 	<!-- Footer -->
