--- a/certificados.html
+++ b/certificados.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Certificados</title>
+	<title>Certificates</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
@@ -31,10 +31,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link active">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link active">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -45,12 +45,17 @@
 		<!-- Two -->
 		<section id="two">
 			<header class="major">
-				<h2>Certificados</h2>
+				<h2>Certificates</h2>
 			</header>
-			<p>Cursos que já realizei e certificados que possuo.</p>
+			<p>Courses I've taken and certificates I've earned.</p>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://credentials.getdbt.com/09e37c10-89a5-4025-9657-5631c7d0cc6c" class="image fit thumb no-overlay"><img src="images/certificados/certificado09.png" alt="" /></a>
+					<a href="https://drive.google.com/file/d/11qjSVfm5jETl3VI-pY48aTOBR_1lsT3A/view?usp=drive_link" class="image fit thumb no-overlay"><img src="images/certificados/certificado10.png" alt="" /></a>
+					<h3>Python Impressionador</h3>
+					<p>Hashtag Treinamentos</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="https://credentials.getdbt.com/09e37c10-89a5-4025-9657-5631c7d0cc6c" class="image fit thumb no-overlay"><img src="images/certificados/certificado09_.png" alt="" /></a>
 					<h3>dbt Fundamentals</h3>
 					<p>dbt Labs</p>
 				</article>
@@ -60,43 +65,18 @@
 					<p>Google Cloud Plataform</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/14e_tIARXiVrx8bDzssSaZo3dtCs6C595/view?usp=sharing" class="image fit thumb no-overlay"><img src="images/certificados/certificado07.png" alt="" /></a>
-					<h3>Fundamentos da Engenharia de Dados</h3>
-					<p>DSA - Carga horária: 24h</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/1hfvvRAljAmy757d0Q13ueKk7pcCpU9oL/view?usp=sharing" class="image fit thumb no-overlay"><img src="images/certificados/certificado06.png" alt="" /></a>
-					<h3>Descubra a Nuvem AWS</h3>
-					<p>DIO - Carga horária: 6h</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
 					<a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing" class="image fit thumb no-overlay"><img src="images/certificados/certificado05.png" alt="" /></a>
 					<h3>LM Tech Data Talents</h3>
-					<p>Ada Tech - Carga horária: 324h</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/1U3ZorsFbvFRN20rA-K01l_5ot85moLtK/view?usp=share_link" class="image fit thumb no-overlay"><img src="images/certificados/certificado04.png" alt="" /></a>
-					<h3>Coding Tank</h3>
-					<p>Ada Tech - Carga horária: 36h</p>
+					<p>Ada Tech</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="https://drive.google.com/file/d/1GQCJ-9Ww5BQ4SsSvpZdBqCPaHPOM61V-/view?usp=share_link" class="image fit thumb no-overlay"><img src="images/certificados/certificado03.png" alt="" /></a>
 					<h3>Excel Impressionador</h3>
-					<p>Hashtag - Carga horária: 128h</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link" class="image fit thumb no-overlay"><img src="images/certificados/certificado02.png" alt="" /></a>
-					<h3>Python para Data Science</h3>
-					<p>PA Analytics - Carga horária: 30h</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/1XajFQbL1YAZT_sXv329k5jz2E2GbEXny/view?usp=share_link" class="image fit thumb no-overlay"><img src="images/certificados/certificado01.png" alt="" /></a>
-					<h3>Metodologias Ágeis</h3>
-					<p>Escola Conquer - Carga horária: 12h</p>
+					<p>Hashtag Treinamentos</p>
 				</article>
 			</div>
 			<ul class="actions">
-				<li><a href="index.html" class="button icon solid fa-arrow-left">Voltar</a></li>
+				<li><a href="index.html" class="button icon solid fa-arrow-left">Return</a></li>
 			</ul>
 		</section>
 
