Update about me section

--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Sobre mim</title>
+	<title>About me</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
@@ -32,10 +32,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link active">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link active">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -45,22 +45,26 @@
 		<section id="inicio">
 			<header class="major">
 				<!-- Imagem principal -->
-				<h2>Sobre mim</h2>
+				<h2>About me</h2>
 			</header>
 
 			<!-- Conteudo principal -->
 			<section>
 				<p><span class="image right no-overlay"><img src="images/img01.png" alt="" /></span>
-					Oie! Meu nome é Carolina, mas pode me chamar de Carol ou de Yumi. Tenho 30 anos, moro em São Carlos - SP.</p>
+					Hi! My name is Carolina, but you can call me Carol or Yumi. I'm 30 years old and I live in São Carlos, SP.
+				</p>
 
-				<p>Sou engenheira civil pela Universidade Federal de São Carlos (UFSCar) e mestra em engenharia 
-					de transportes pela Escola de Engenharia de São Carlos da Universidade de São Paulo (EESC-USP).</p>
-				
-				<p>Trabalho como engenheira de dados e também faço graduação em ciência de dados na Universidade 
-					Virtual do Estado de São Paulo (UNIVESP).</p>
-				
-				<p>Sou apaixonada pela natação desde criança, amo treinar e competir. No meu tempo livre, 
-					gosto de assistir animes e ler livros de investigação policial.</p>
+				<p>
+					I have a bachelor's degree in civil engineering from the Federal University of São Carlos (UFSCar) and a master's degree in transportation engineering from the School of Engineering of São Carlos at the University of São Paulo (EESC-USP).
+				</p>
+
+				<p>
+					I work as a data engineer and I'm also pursuing a bachelor's degree in data science at the Virtual University of the State of São Paulo (UNIVESP).
+				</p>
+
+				<p>
+					I've loved swimming since I was a child, and I enjoy training and competing. In my free time, I like to watch animes and read detective novels.
+				</p>
 
 			</section>
 		</section>
