--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link active">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link active">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -45,20 +45,20 @@
 		<!-- One -->
 		<section id="one">
 			<header class="major">
-				<h2>Meu portfólio</h2>
+				<h2>Portfolio</h2>
 			</header>
-			<p>Nesta página você encontrará todos os meus projetos.</p>
+			<p>On this page you will find all my projects.</p>
 		</section>
 
 		<!-- Two -->
 		<section id="two">
-			<h2>Projetos</h2>
+			<h2>Projects</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="projeto06_breweries.html" class="image fit thumb"><img src="images/thumbs/cervejaria.jpg"
+					<a href="projeto06_breweries.html" class="image fit thumb"><img src="images/thumbs/cervejaria.png"
 							alt="" /></a>
-					<h3>Extração e análise de dados de cervejarias</h3>
-					<p>Dados da API Open Brewery DB.</p>
+					<h3>Brewery data extraction and analysis</h3>
+					<p>Data from the Open Brewery DB API.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/python.svg">
 						<img class="icone" src="images/icons/pandas.svg">
@@ -70,8 +70,8 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto05_previsaotempo.html" class="image fit thumb"><img src="images/thumbs/apihg.jpg"
 							alt="" /></a>
-					<h3>Coleta de dados - API HG Weather</h3>
-					<p>Coleta e processamento de dados do clima de São Carlos.</p>
+					<h3>Data collection - HG Weather API</h3>
+					<p>Collection and processing of climate data for São Carlos.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/python.svg">
 						<img class="icone" src="images/icons/google.svg">
@@ -80,8 +80,8 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto04_automacao.html" class="image fit thumb"><img
 							src="images/thumbs/selenium.png" alt="" /></a>
-					<h3>Automação Web - Selenium</h3>
-					<p>Simulação de compra em site utilizando Selenium.</p>
+					<h3>Web Automation - Selenium</h3>
+					<p>Website purchase simulation using Selenium.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/python.svg">
 						<img class="icone" src="images/icons/se.svg">
@@ -90,8 +90,8 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto03_pinguins.html" class="image fit thumb"><img src="images/thumbs/pinguins.png"
 							alt="" /></a>
-					<h3>Pinguins</h3>
-					<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
+					<h3>Penguins</h3>
+					<p>Penguin feature analysis project. Source: Kaggle.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/python.svg">
 						<img class="icone" src="images/icons/pandas.svg">
@@ -101,8 +101,8 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto02_investidores.html" class="image fit thumb"><img
 							src="images/thumbs/investidores.png" alt="" /></a>
-					<h3>Investidores</h3>
-					<p>Projeto final do módulo Técnicas de Programação I da formação em Python e Dados da Ada Tech.</p>
+					<h3>Investors</h3>
+					<p>Final project of the Programming Techniques I module of the Python and Data training at Ada Tech.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/python.svg">
 						<img class="icone" src="images/icons/pandas.svg">
@@ -112,8 +112,8 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto01_steam.html" class="image fit thumb"><img
 							src="images/thumbs/steam.png" alt="" /></a>
-					<h3>Jogos da Steam</h3>
-					<p>Projeto final do módulo Banco de Dados I da formação em Python e Dados da Ada Tech.</p>
+					<h3>Steam games</h3>
+					<p>Final project of the Database I module of the Python and Data training at Ada Tech.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/python.svg">
 						<img class="icone" src="images/icons/pandas.svg">
@@ -123,8 +123,8 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto00_dash_pbi_vendas.html" class="image fit thumb"><img
 							src="images/thumbs/vendas-pbi.jpg" alt="" /></a>
-					<h3>Dashboard - Power BI - Vendas</h3>
-					<p>Relatório de vendas utilizando Power BI, elaborado com dados fictícios.</p>
+					<h3>Dashboard - Power BI - Sales</h3>
+					<p>Sales report using Power BI, prepared with fictitious data.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/excel.svg">
 						<img class="icone" src="images/icons/pbi.svg">
@@ -133,15 +133,15 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto00_dash_excel_medicos.html" class="image fit thumb"><img
 							src="images/thumbs/medico.jpg" alt="" /></a>
-					<h3>Dashboard - Excel - Atendimentos Médicos</h3>
-					<p>Dashboard para uma clínica médica, elaborado com dados fictícios.</p>
+					<h3>Dashboard - Excel - Medical services</h3>
+					<p>Dashboard for a medical clinic, created with fictitious data.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/excel.svg">
 					</div>
 				</article>
 			</div>
 			<ul class="actions">
-				<li><a href="index.html" class="button icon solid fa-arrow-left">Voltar</a></li>
+				<li><a href="index.html" class="button icon solid fa-arrow-left">Back</a></li>
 			</ul>
 		</section>
 
