--- a/certificados.html
+++ b/certificados.html
@@ -76,7 +76,7 @@
 				</article>
 			</div>
 			<ul class="actions">
-				<li><a href="index.html" class="button icon solid fa-arrow-left">Return</a></li>
+				<li><a href="index.html" class="button icon solid fa-arrow-left">Back</a></li>
 			</ul>
 		</section>
 
